--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "files": [
     "dist"
   ],
-  "repository": "git://github.com/A-I-M-U/date-manipulator.git"
+  "repository": "git://github.com/A-I-M-U/date-manipulator.git",
   "publishConfig": {
      "registry":"https://npm.pkg.github.com"
   }
