--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@A-I-M-U/date-manipulator",
+  "name": "@aimu/date-manipulator",
   "version": "0.1.0",
   "main": "dist/date-manipulator.js",
   "unpkg": "dist/date-manipulator.min.js",
@@ -25,8 +25,5 @@
   "files": [
     "dist"
   ],
-  "repository": "git://github.com/A-I-M-U/date-manipulator.git",
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com/A-I-M-U"
-  }
+  "repository": "git://github.com/A-I-M-U/date-manipulator.git"
 }
