Build and add description

--- a/package.json
+++ b/package.json
@@ -26,5 +26,5 @@
   "files": [
     "dist"
   ],
-  "repository": "git://github.com/A-I-M-U/date-manipulator.git"
+  "repository": "https://github.com/A-I-M-U/date-manipulator.git"
 }
