--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aimu/date-manipulator",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Built for solving date and time manipulation problems.",
   "main": "dist/date-manipulator.js",
   "unpkg": "dist/date-manipulator.min.js",
@@ -21,7 +21,11 @@
     "test": "node test/main.test.js",
     "pretest": "npm run build"
   },
-  "keywords": ["date", "time", "manipulation"],
+  "keywords": [
+    "date",
+    "time",
+    "manipulation"
+  ],
   "author": "A-I-M-U",
   "license": "MIT",
   "files": [
